--- a/skills.html
+++ b/skills.html
@@ -54,7 +54,8 @@ Certified in CompTIA A+, Network+, Security+, AWS Cloud, and Microsoft SC-900, I
 
             <!-- Gallery Section -->
             <section class="gallery">
-                <h2>Projects</h2>
+                <h2>3D Prints</h2>
+                <p>I didn't design these</p>
                 <div class="gallery-grid">
                     <div class="gallery-item">
                         <img src="/images/Suspended Moon.JPG" alt="Project 1">
