More updates Lol
Little things this time

--- a/skills.html
+++ b/skills.html
@@ -32,7 +32,7 @@
             <!-- Resume Section -->
             <section class="resume">
                 <h2>Synopsis</h2>
-                <p><a href="https://github.com/TheWolf-101?tab=repositories">Find more on my Github</p></a>
+                <p><a href="https://github.com/TheWolf-101?tab=repositories">Check out my repositories!</p></a>
                 <p>
                     I’m an IT professional with experience supporting Fortune 500 companies and enhancing IT operations through system optimization and cybersecurity. Skilled in troubleshooting, PowerShell, Python, and networking tools, I’m passionate about creating impactful solutions.
 
@@ -55,7 +55,8 @@ Certified in CompTIA A+, Network+, Security+, AWS Cloud, and Microsoft SC-900, I
             <!-- Gallery Section -->
             <section class="gallery">
                 <h2>3D Prints</h2>
-                <p>I didn't design these</p>
+                <p>I didn't design these but check out my instagram!</p>
+                <a href="https://www.instagram.com/five_more.minutes?igsh=NTc4MTIwNjQ2YQ==">5 More Minutes</a>
                 <div class="gallery-grid">
                     <div class="gallery-item">
                         <img src="/images/Suspended Moon.JPG" alt="Project 1">
