More CSS changes
It looked weird on Chrome light mode.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     I'm an IT professional on a journey to learn everything I can about computers
                     and everything IT related. I love to create things, programs, scripts, etc.
                     I own and operate a 3D printer which I use to create both functional and interesting objects
-                    which you can find more of on my <a href="skills.html">Skills</a> page. 
+                    which you can find more of on my <a href="skills.html">skills</a> page. 
                     </p>
                 </section>
                 <section class="skills">
