--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="main">
                 <section class="resume">
                     <h1>resume</h1>
-                    <p>5 years of IT Support / 2 years of Cloud and AWS</p>
+                    <p>5 years of IT Support L1 & L2 / 2 years of Cloud and AWS</p>
                     <p>
                     I'm an IT professional on a journey to learn everything I can about computers
                     and everything IT related. I love to create things, programs, scripts, etc.
